# AgileInfer

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
resources/: sparse_trace_file.txt  trace_file.txt
resources/resnet152_v2/: model.1.clockwork  model.16.clockwork  model.2.clockwork  model.4.clockwork  model.8.clockwork  model.measurements
resources/resnet18_v2/: model.1.clockwork  model.16.clockwork  model.2.clockwork  model.4.clockwork  model.measurements
resources/resnet50_v2/: model.1.clockwork  model.16.clockwork  model.2.clockwork  model.4.clockwork  model.8.clockwork  model.measurements
src/agile_infer/: Cargo.toml
src/agile_infer/proto/: api.proto
src/agile_infer/src/: grpc.rs  lib.rs  scheduler.rs
src/clockwork/: Cargo.toml
src/clockwork/resources/resnet18_v2/: model.8.clockwork
src/clockwork/src/: batched_model.rs  c_api.rs  lib.rs  model.rs  model_def.rs  pod_de.rs
src/cuda_manager/: Cargo.toml
src/cuda_manager/src/: cuda_manager.rs  device_manager.rs  handle.rs  idmap.rs  lib.rs  utils.rs
src/orchestrator/: Cargo.toml
src/orchestrator/src/: batcher.rs  builder.rs  executor.rs  lib.rs  model.rs  orchestrator.rs
