[package]
name = "clockwork"
version = "0.1.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libloading = "0.6"
cuda_manager = { path = "../cuda_manager" }

[dev-dependencies]
serial_test = "0.5"
crossbeam = "0.8"
