[package]
name = "orchestrator"
version = "0.1.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_manager = { path = "../cuda_manager" }
lz4_flex = { version = "0.7", default-features = false }
crossbeam = "0.8"
log = "0.4"

[dev-dependencies]
serial_test = "0.5"
